--- a/styles/banner.css
+++ b/styles/banner.css
@@ -43,7 +43,7 @@
   .banner-text-block {
     width: 90%;
     position: absolute;
-    left: 5%;
-    top: 25%
+    top: 20vw;
+    left: 5vw;
   }
 }
